added missing files

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 *.user
 node_modules
 bower_components
-src/client/*.js
-src/client/*.js.map
+src/client/**/*.js
+src/client/**/*.js.map
 bin
 obj
 debug
